--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 </div>
                 <div class="skill-item">
                     <h3>🛠️ Tools</h3>
-                    <p>Terraform, Ansible, Kubernetes, SQLite, JSON APIs</p>
+                    <p>Terraform, Ansible, SQLite, JSON APIs</p>
                 </div>
                 <div class="skill-item">
                     <h3>🔧 Core Skills</h3>
@@ -330,19 +330,9 @@
                 </div>
 
                 <div class="project-card">
-                    <div class="project-title">CI/CD Pipeline Automation</div>
-                    <p>Designed and implemented a comprehensive CI/CD pipeline using Jenkins, Docker, and Kubernetes to automate software delivery and deployment with high availability.</p>
-                </div>
-
-                <div class="project-card">
                     <div class="project-title">Automated Resume Builder</div>
                     <p>OOP-based Python application that automates resume generation, demonstrating clean code architecture, data structures, and version control best practices.</p>
                     <a href="https://github.com/sneha-pasam" class="cta-button" target="_blank" style="margin-top: 1rem; font-size: 0.9rem;">View on GitHub</a>
-                </div>
-
-                <div class="project-card">
-                    <div class="project-title">Automatic Timetable Generator</div>
-                    <p>Developed using Genetic Algorithms with Python Tkinter GUI and SQLite database. Optimized resource allocation and eliminated manual scheduling conflicts.</p>
                 </div>
             </div>
         </section>
